<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="252dp"
        android:layout_height="0dip"
        android:layout_weight="0.10"
        android:gravity="center" >

        <TableRow
            android:id="@+id/tr_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/name_form_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/element_name" />
        </TableRow>

        <TableRow
            android:id="@+id/tr_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/rdg_form_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/on_form_layout"
                    android:layout_width="245dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#39f"
                    android:checked="true"
                    android:gravity="center"
                    android:includeFontPadding="true"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/on"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/off_form_layout"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:background="#A4A4A4"
                    android:contentDescription="@string/off"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/off"
                    android:textColor="#FBEFEF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/tap_form_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="#000"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/tap"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/other_form_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#FF0000"
                    android:gravity="center"
                    android:text="@string/other"
                    android:textSize="20sp" />

            </RadioGroup>

        </TableRow>

        <TableRow
            android:id="@+id/tr_notes_form_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/notes_form_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/notes"
                android:inputType="textMultiLine" />
        </TableRow>

        <TableRow
            android:id="@+id/tr_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickButtonSave"
                android:text="@string/save" />

        </TableRow>

        <TableRow
            android:id="@+id/tr_latlong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/latitude_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/latitude"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/longitude_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/longitude"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

</LinearLayout>